Style update, fixed key layout problems

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,16 @@ body {
 
 #albumart { 
 	height: 300px; 
-	width: 300px; 
-	margin-top: 10px;
+	width: 300px;
+	display: block; 
+	margin-left: auto; 
+	margin-right: auto;
 }
+
+#albumart:hover { 
+	border: 2px solid #ADADAD;
+	
+} 
 
 #title { 
 	font-size: 100px;
@@ -28,24 +35,34 @@ body {
 h1, 
 h2, 
 h3 { 
-	color: white;
+	color: #DBDBDB;
 	letter-spacing: 10px;
-	text-align: center;
-	text-shadow: 3px 3px 3px #c8e7ec;
+	text-shadow: 2px 2px 2px #ADADAD;
+	line-height: 150%;
 }
 
 h1, 
 h2,
 h3,
-p
+p, 
+a
 { 
 	font-family: 'Just Another Hand', cursive;
+	text-align: center;
 }
 
-p { 
-	color: white;
+p, 
+a { 
+	color: #DBDBDB;
 	letter-spacing: 10px;
-	text-shadow: 3px 3px 3px #c8e7ec;
+	text-shadow: 2px 2px 2px #ADADAD;
 	line-height: 200%;
 }    
 
+a { 
+	text-decoration: none; 
+} 
+
+a:hover { 
+	text-shadow: 2px 2px 2px black;
+} 
